2007-02-22  Daniel J Sebald  <daniel.sebald@ieee.org>

	* plot/__uiobject_draw_axes__.m:
	Allow multiple images to be displayed with gnuplot.

2007-02-20  Rafael Laboissiere  <rafael@debian.org>

	* optimization/glpk.m: Document the fact that extra.mem does not work
	for versions of GLPK 4.15 and later.

2007-02-19  John W. Eaton  <jwe@octave.org>

	* plot/__uiobject_alloc__.in: If next available element in
	__uiobject_list__ is 0, grow list before doing anything else.
	* plot/__uiobject_grow_list__.in: Only set __uiobject_head__ on
	first call when size of __uiobject_list__ is 0.

2007-02-16  John W. Eaton  <jwe@octave.org>

	* miscellaneous/Makefile.in (SOURCES): Remove popen2.m from the list.

2007-02-16  Michael Goffioul  <michael.goffioul@swing.be>

	* miscellaneous/popen2.m: Remove as replaced with builtin.

2007-02-16  Muthiah Annamalai  <muthuspost@gmail.com>

	* specfun/nchoosek.m: Check nargin.

2007-02-15  John W. Eaton  <jwe@octave.org>

	* path/addpath.m, path/rmpath.m: Delete
	* path/Makefile.in (SOURCES): Remove them from the list.

	* plot/__uiobject_axes_init__.in, plot/__uiobject_axes_setr__.m:
	Delete title, xlabel, ylabel, and zlabel properties before
	reassigning.
	* plot/__uiobject_axes_init__.in: New arg, mode.
	Don't init outerposition if "mode" is "replace".
	* plot/newplot.m: Check both figure and axes nextplot properties.
	If axes nextplot property is replace, pass "replace" as mode arg
	to __uiobject_axes_init__.

2007-02-15  Daniel J Sebald  <daniel.sebald@ieee.org>

	* image/imshow.m: Don't restore old colormap.

	* plot/__uiobject_image_ctor__.m: Set xdata and ydata properties.
	* image/__img__.m: New file containing common parts of image.m and
	imshow.m.
	* image/Makefile.in (SOURCES): Add __img__.m to the list.
	* image/image.m, image/imshow.m: Call __img__.
	* plot/__uiobject_draw_axes__.m:
	Handle rgb imaged data stored in 3-d arrays.

	* plot/figure.m: Doc fix.

2007-02-14  Thomas Weber  <thomas.weber.mail@gmail.com>
