@@ -1,3 +1,8 @@
+2007-02-22  John W. Eaton  <jwe@octave.org>
+
+	* plot/__uiobject_draw_axes__.m: If not using gnuplot for images,
+	cache data and display after xlim and ylim have been determined.
+
 2007-02-22  Daniel J Sebald  <daniel.sebald@ieee.org>
 
 	* plot/__uiobject_draw_axes__.m:
